# youtube-downloader

./: Cargo.toml  Pipfile  README.md  setup.py
src/: config.rs  download_thread.rs  handler_thread.rs  job.rs  lib.rs  server.rs
testing/: test_downloader.py  test_jobs.py  test_server.py  testconfig.toml
youtube_downloader/: addjob.py  download_thread.py  handler_thread.py  job.py  server.py  servercli.py
