[package]
name = "youtube-downloader"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[dependencies]
zmq = "0.8.2"
structopt = "0.2.10"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
failure = "0.1.2"
toml = "0.4.6"
slog = "2.3.2"
slog-term = "2.4.0"
slog-async = "2.3.0"

[[bin]]
name = "yt-add"
path = "src/bin/yt_add.rs"

[[bin]]
name = "yt-server"
path = "src/bin/yt_server.rs"
